--- a/html/about.html
+++ b/html/about.html
@@ -53,13 +53,13 @@
     </main>
     <footer class="mt-3 container-fluid position-relative">
         <p class="lead text-center">&copy 
-            <span id="all-rights">Organics Cosmetics Wholesaler 2023.</span>
+            <span id="all-rights">Organic Cosmetics Wholesaler 2023.</span>
             <span>All rights reserved.</span>
         </p>
         <div class="text-center">
+            <a href="#"class="text-dark mx-2"><i class="bi bi-facebook"></i></a>
             <a href="#"class="text-dark mx-2"><i class="bi bi-whatsapp"></i></a>
             <a href="#"class="text-dark mx-2"><i class="bi bi-instagram"></i></a>
-            <a href="#"class="text-dark mx-2"><i class="bi bi-facebook"></i></a>
         </div>
     </footer>
     <script
