--- a/html/admin.html
+++ b/html/admin.html
@@ -1,70 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <!--css-->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Checkout</title>
-</head>
-<body>
-<nav>
-        <a class="logoImage" href="/index.html">
-            <img src="https://i.postimg.cc/hvQ15s0b/images-11.jpg" alt="">
-        </a>
-        <div class="navigation">
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="./about.html">About</a></li>
-                <li><a href="./products.html">Products</a></li>
-                <li><a href="./checkout.html">Checkout</a></li>
-                <li><a href="./admin.html">Admin</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-            </ul>
-        </div>
+  </head>
+  <body>
+    <nav>
+      <a class="logoImage" href="/index.html">
+        <img src="https://i.postimg.cc/hvQ15s0b/images-11.jpg" alt="" />
+      </a>
+      <div class="navigation">
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./products.html">Products</a></li>
+          <li><a href="./checkout.html">Checkout</a></li>
+          <li><a href="./admin.html">Admin</a></li>
+          <li><a href="./contact.html">Contact</a></li>
+        </ul>
+      </div>
     </nav>
-<main>
- <div class="header">
+    <main>
+      <div class="header">
         <h2>Admnistration</h2>
-</div>
-    <table id="productTable">
+      </div>
+      <table id="productTable">
         <thead>
-            <tr>
-                <th>Name</th>
-                <th>Price</th>
-                <th>Image</th>
-                <th>Action</th>
-            </tr>
+          <tr>
+            <th>Name</th>
+            <th>Price</th>
+            <th>Image</th>
+            <th>Action</th>
+          </tr>
         </thead>
         <tbody>
-            <!-- Product rows will be added dynamically here -->
+          <!-- Product rows will be added dynamically here -->
         </tbody>
-    </table>
-    
-    <div id="myModal" class="modal">
+      </table>
+
+      <div id="myModal" class="modal">
         <div class="modal-content">
-            <span class="close" onclick="closeModal()">&times;</span>
-            <h2>Product Details</h2>
-            <p id="productName"></p>
-            <p id="productPrice"></p>
-            <img id="productImage" alt="Product Image" style="max-width: 200px; max-height: 200px;">
+          <span class="close" onclick="closeModal()">&times;</span>
+          <h2>Product Details</h2>
+          <p id="productName"></p>
+          <p id="productPrice"></p>
+          <img
+            id="productImage"
+            alt="Product Image"
+            style="max-width: 200px; max-height: 200px"
+          />
         </div>
-    </div>
-</main>
+      </div>
+    </main>
     <footer class="mt-3 container-fluid position-relative">
-        <p class="lead text-center">&copy 
-            <span id="all-rights">Organics Cosmetics Wholesaler 2023.</span>
-            <span>All rights reserved.</span>
-        </p>
-        <div class="text-center">
-            <a href="#"class="text-dark mx-2"><i class="bi bi-facebook"></i></a>
-            <a href="#"class="text-dark mx-2"><i class="bi bi-instagram"></i></a>
-            <a href="#"class="text-dark mx-2"><i class="bi bi-whatsapp"></i></a>
-        </div>
+      <p class="lead text-center">
+        &copy
+        <span id="all-rights">Organic Cosmetics Wholesaler 2023.</span>
+        <span>All rights reserved.</span>
+      </p>
+      <div class="text-center">
+        <a href="#" class="text-dark mx-2"><i class="bi bi-facebook"></i></a>
+        <a href="#" class="text-dark mx-2"><i class="bi bi-instagram"></i></a>
+        <a href="#" class="text-dark mx-2"><i class="bi bi-whatsapp"></i></a>
+      </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
     <script src="/script/admin.js"></script>
-</body>
+  </body>
 </html>
