--- a/html/checkout.html
+++ b/html/checkout.html
@@ -55,15 +55,18 @@
     <div>
         
     </div>
-    <div>
+    <div id="clearBuy">
         <button onclick="clearCart()">Clear Cart</button>
         <button onclick="buyNow()">Buy Now</button>
         <p id="thankYouMessage" style="display: none;">Thank you for shopping with us!</p>
     </div>
+    <div>
+        <label class="text3">Total Amount: </label>
+    </div>
     </main>
     <footer class="mt-3 container-fluid position-relative">
         <p class="lead text-center">&copy 
-            <span id="all-rights">Organics Cosmetics Wholesaler 2023.</span>
+            <span id="all-rights">Organic Cosmetics Wholesaler 2023.</span>
             <span>All rights reserved.</span>
         </p>
         <div class="text-center">
