--- a/html/contact.html
+++ b/html/contact.html
@@ -18,9 +18,9 @@
     <main>
       <nav>
         <div>
-            <a class="logoImage" href="/index.html">
-                <img src="https://i.postimg.cc/hvQ15s0b/images-11.jpg" alt="">
-            </a>
+          <a class="logoImage" href="/index.html">
+            <img src="https://i.postimg.cc/hvQ15s0b/images-11.jpg" alt="" />
+          </a>
         </div>
         <div class="navigation">
           <ul>
@@ -38,33 +38,62 @@
       </div>
       <div id="form1">
         <form action="https://formspree.io/f/xnqkldqw" method="post">
-            <div class="mb-3 w-25 ">
-              <label for="#FirstName" class="form-label">Name</label>
-              <input type="text" class="form-control" name="Fullname" id="FirstName" aria-describedby="#Fullname" placeholder="enter name here" required>
-             
-            </div>
-            <div class="mb-3 w-25">
-              <label for="#Surname" class="form-label">Surname</label>
-              <input type="text" class="form-control" name="Surname" required id="Surname" aria-describedby="#Surname" placeholder="enter surname here">
-             
-            </div>
-            <div class="mb-3">
-              <label for="#Email" class="form-label">Email address</label>
-              <input type="Email" class="form-control" name="Email" required id="Email" aria-describedby="#Email" placeholder="name@example.com
-              ">
-            </div>
-            <div class="mb-3">
-              <label for="#Message" class="form-label">Message</label>
-              <textarea class="form-control" id="Message" rows="3" placeholder="Message"></textarea>
-            </div>
-            <button type="submit" class="btn btn-dark" target="_blank">Submit</button>
-          </form>
+          <div class="mb-3 w-25">
+            <label for="#FirstName" class="form-label">Name</label>
+            <input
+              type="text"
+              class="form-control"
+              name="Fullname"
+              id="FirstName"
+              aria-describedby="#Fullname"
+              placeholder="enter name here"
+              required
+            />
+          </div>
+          <div class="mb-3 w-25">
+            <label for="#Surname" class="form-label">Surname</label>
+            <input
+              type="text"
+              class="form-control"
+              name="Surname"
+              required
+              id="Surname"
+              aria-describedby="#Surname"
+              placeholder="enter surname here"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="#Email" class="form-label">Email address</label>
+            <input
+              type="Email"
+              class="form-control"
+              name="Email"
+              required
+              id="Email"
+              aria-describedby="#Email"
+              placeholder="name@example.com
+              "
+            />
+          </div>
+          <div class="mb-3">
+            <label for="#Message" class="form-label">Message</label>
+            <textarea
+              class="form-control"
+              id="Message"
+              rows="3"
+              placeholder="Message"
+            ></textarea>
+          </div>
+          <button type="submit" class="btn btn-dark" target="_blank">
+            Submit
+          </button>
+        </form>
       </div>
     </main>
     <footer class="mt-3 container-fluid position-relative">
       <p class="lead text-center">
         &copy
-        <span id="all-rights">Organics Cosmetics Wholesaler 2023.</span>
+        <span id="all-rights">Organic Cosmetics Wholesaler 2023.</span>
         <span>All rights reserved.</span>
       </p>
       <div class="text-center">
