--- a/html/products.html
+++ b/html/products.html
@@ -1,88 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <!--css-->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Products</title>
-</head>
-<body>
-   <header>
-    <nav>
+  </head>
+  <body>
+    <header>
+      <nav>
         <a class="logoImage" href="/index.html">
-            <img src="https://i.postimg.cc/hvQ15s0b/images-11.jpg" alt="">
+          <img src="https://i.postimg.cc/hvQ15s0b/images-11.jpg" alt="" />
         </a>
         <div class="navigation">
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="./about.html">About</a></li>
-                <li><a href="./products.html">Products</a></li>
-                <li><a href="./checkout.html">Checkout</a></li>
-                <li><a href="./admin.html">Admin</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-            </ul>
+          <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./products.html">Products</a></li>
+            <li><a href="./checkout.html">Checkout</a></li>
+            <li><a href="./admin.html">Admin</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+          </ul>
         </div>
-    </nav>
-   </header>
-   <main>
-    <div class="header">
+      </nav>
+    </header>
+    <main>
+      <div class="header">
         <h2>Products</h2>
-    </div>
-        <!-- Search bar-->
-    <div class="search-sort">
-        <input type="text" id="searchInput" placeholder="Search products...">
+      </div>
+      <!-- Search bar-->
+      <div class="search-sort">
+        <input type="text" id="searchInput" placeholder="Search products..." />
         <button onclick="searchProducts()">Search</button>
         <!-- Sort bar-->
         <select id="sort" onchange="sortProducts()">
-            <option value="price_asc">Price: Low to High</option>
-            <option value="price_desc">Price: High to Low</option>
+          <option value="price_asc">Price: Low to High</option>
+          <option value="price_desc">Price: High to Low</option>
         </select>
-    </div>
-   
-    <div class="row-cols-1" id="productContainer">
+      </div>
+
+      <div class="row-cols-1" id="productContainer">
         <!-- Product cards will be displayed here -->
         <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col">
-              <div class="card h-100">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">description</p>
-                </div>
-                <div class="card-footer">
-                  <small class="text-body-secondary">button</small>
-                </div>
+          <div class="col">
+            <div class="card h-100">
+              <img src="..." class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">description</p>
               </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">description</p>
-                </div>
-                <div class="card-footer">
-                  <small class="text-body-secondary">Button</small>
-                </div>
+              <div class="card-footer">
+                <small class="text-body-secondary">button</small>
               </div>
             </div>
           </div>
-    </div>
-   </main>
-   <footer class="mt-3 container-fluid position-relative">
-    <p class="lead text-center">&copy 
-        <span id="all-rights">Organics Cosmetics Wholesaler 2023.</span>
+          <div class="col">
+            <div class="card h-100">
+              <img src="..." class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">description</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-body-secondary">Button</small>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer class="mt-3 container-fluid position-relative">
+      <p class="lead text-center">
+        &copy
+        <span id="all-rights">Organic Cosmetics Wholesaler 2023.</span>
         <span>All rights reserved.</span>
-    </p>
-    <div class="text-center">
-        <a href="#"class="text-dark mx-2"><i class="bi bi-facebook"></i></a>
-        <a href="#"class="text-dark mx-2"><i class="bi bi-instagram"></i></a>
-        <a href="#"class="text-dark mx-2"><i class="bi bi-whatsapp"></i></a>
-    </div>
-</footer>
+      </p>
+      <div class="text-center">
+        <a href="#" class="text-dark mx-2"><i class="bi bi-facebook"></i></a>
+        <a href="#" class="text-dark mx-2"><i class="bi bi-instagram"></i></a>
+        <a href="#" class="text-dark mx-2"><i class="bi bi-whatsapp"></i></a>
+      </div>
+    </footer>
     <script src="../script/product.js"></script>
-</body>
+  </body>
 </html>
