--- a/index.html
+++ b/index.html
@@ -1,51 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <!-- css -->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Home Page</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav>
-        <div>
+      <div>
         <a class="logoImage" href="/index.html">
-            <img src="https://i.postimg.cc/hvQ15s0b/images-11.jpg" alt="">
+          <img src="https://i.postimg.cc/hvQ15s0b/images-11.jpg" alt="" />
         </a>
-        </div>
-        <div class="navigation">
-            <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="./html/about.html">About</a></li>
-                <li><a href="./html/products.html">Products</a></li>
-                <li><a href="./html/checkout.html">Checkout</a></li>
-                <li><a href="./html/admin.html">Admin</a></li>
-                <li><a href="./html/contact.html">Contact</a></li>
-            </ul>
-        </div>
+      </div>
+      <div class="navigation">
+        <ul>
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="./html/about.html">About</a></li>
+          <li><a href="./html/products.html">Products</a></li>
+          <li><a href="./html/checkout.html">Checkout</a></li>
+          <li><a href="./html/admin.html">Admin</a></li>
+          <li><a href="./html/contact.html">Contact</a></li>
+        </ul>
+      </div>
     </nav>
     <main id="home">
-     <div>
-        <img src="https://i.postimg.cc/Bbj7zYGq/woman-holding-up-a-face-cream-1296x728-header-1.jpg" alt="">
-        <h1 class="text-1">Greetings! Welcome to <b class="storeName">Organic Cosmetic Wholesaler.</b> I'm Vuyiseka, and I'm delighted to have you here. Explore our diverse range of organic products designed to cater to your skincare needs.</h1>
-    </div>
+      <div>
+        <img
+          src="https://i.postimg.cc/Bbj7zYGq/woman-holding-up-a-face-cream-1296x728-header-1.jpg"
+          alt=""
+        />
+        <h1 class="text-1">
+          Greetings! Welcome to
+          <b class="storeName">Organic Cosmetic Wholesaler.</b> I'm Vuyiseka,
+          and I'm delighted to have you here. Explore our diverse range of
+          organic products designed to cater to your skincare needs.
+        </h1>
+      </div>
     </main>
     <footer class="mt-3 container-fluid position-relative">
-        <p class="lead text-center">&copy 
-            <span id="all-rights">Organics Cosmetics Wholesaler 2023.</span>
-            <span>All rights reserved.</span>
-        </p>
-        <div class="text-center">
-            <a href="" class="text-dark mx-2"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="text-dark mx-2"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="text-dark mx-2"><i class="bi bi-whatsapp"></i></a>
-        </div>
+      <p class="lead text-center">
+        &copy
+        <span id="all-rights">Organic Cosmetics Wholesaler 2023.</span>
+        <span>All rights reserved.</span>
+      </p>
+      <div class="text-center">
+        <a href="" class="text-dark mx-2"><i class="bi bi-facebook"></i></a>
+        <a href="#" class="text-dark mx-2"><i class="bi bi-instagram"></i></a>
+        <a href="#" class="text-dark mx-2"><i class="bi bi-whatsapp"></i></a>
+      </div>
     </footer>
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
